// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty 1`] = `
Array [
  <div
    className="mx-32 my-16"
  >
    <div
      className="bg-info px-14 py-8 rounded-[15px]"
    >
      <div
        className="text-2xl py-3 font-bold"
      >
        workspaces.welcome.title
      </div>
      <div
        className="text-prisme-darkblue"
      >
        workspaces.welcome.content
      </div>
      <div
        className="text-accent mt-4 text-sm"
      />
    </div>
    <div
      className="pt-6"
    />
    <div
      className="pt-10"
    >
      <div
        className="text-xl py-3 font-bold"
      >
        workspaces.suggestions.title
      </div>
      <div
        className="flex flex-wrap -mx-2"
      >
        <div
          className="relative group flex flex-col h-32 w-[100%] md:w-[calc(100%/2)] lg:w-[calc(100%/3)] xl:w-[calc(100%/4)]"
          disabled={false}
        >
          <button
            className="flex m-2 h-full justify-between overflow-hidden rounded border p-6 flex border-accent border-dashed bg-ultra-light-accent items-center !justify-start"
            onClick={[Function]}
          >
            <span
              className="flex min-w-[50px] bg-accent p-4 rounded"
            >
              <div />
            </span>
            <span
              className="flex font-bold ml-4 "
            >
              create.label
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="pt-10 flex flex-col"
    >
      <div
        className="text-xl py-3 font-bold"
      >
        workspaces.sectionTitle
      </div>
      <div
        className="flex flex-wrap -mx-2"
      >
        <div
          className="relative group flex flex-col h-32 w-[100%] md:w-[calc(100%/2)] lg:w-[calc(100%/3)] xl:w-[calc(100%/4)]"
        >
          <button
            className="flex m-2 h-full justify-between overflow-hidden rounded border "
          >
            Prout
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="absolute bottom-1 right-1 text-gray mr-1 text-[10px]"
  >
    Prisme.ai v
    6.8.0
  </div>,
]
`;

exports[`should render some workspaces 1`] = `
Array [
  <div
    className="mx-32 my-16"
  >
    <div
      className="bg-info px-14 py-8 rounded-[15px]"
    >
      <div
        className="text-2xl py-3 font-bold"
      >
        workspaces.welcome.title
      </div>
      <div
        className="text-prisme-darkblue"
      >
        workspaces.welcome.content
      </div>
      <div
        className="text-accent mt-4 text-sm"
      />
    </div>
    <div
      className="pt-6"
    />
    <div
      className="pt-10"
    >
      <div
        className="text-xl py-3 font-bold"
      >
        workspaces.suggestions.title
      </div>
      <div
        className="flex flex-wrap -mx-2"
      >
        <div
          className="relative group flex flex-col h-32 w-[100%] md:w-[calc(100%/2)] lg:w-[calc(100%/3)] xl:w-[calc(100%/4)]"
          disabled={false}
        >
          <button
            className="flex m-2 h-full justify-between overflow-hidden rounded border p-6 flex border-accent border-dashed bg-ultra-light-accent items-center !justify-start"
            onClick={[Function]}
          >
            <span
              className="flex min-w-[50px] bg-accent p-4 rounded"
            >
              <div />
            </span>
            <span
              className="flex font-bold ml-4 "
            >
              create.label
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="pt-10 flex flex-col"
    >
      <div
        className="text-xl py-3 font-bold"
      >
        workspaces.sectionTitle
      </div>
      <div
        className="flex flex-wrap -mx-2"
      >
        <div
          className="relative group flex flex-col h-32 w-[100%] md:w-[calc(100%/2)] lg:w-[calc(100%/3)] xl:w-[calc(100%/4)]"
        >
          <a
            className="flex m-2 h-full justify-between overflow-hidden rounded border p-6 flex border-light-gray border-2 bg-white items-center !justify-start relative "
            href="/workspaces/1"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            <button
              className="flex items-center max-w-full focus:outline-none"
            >
              <span
                className="flex min-w-[50px]"
              >
                <div />
              </span>
              <span
                className="flex ml-4 flex-col items-start"
              >
                <div
                  className="overflow-hidden whitespace-nowrap text-ellipsis mb-0 max-w-full font-bold"
                >
                  foo
                </div>
                <div
                  className="overflow-hidden whitespace-nowrap text-ellipsis max-w-[15rem]"
                >
                  
                </div>
                edit.label
              </span>
              <button
                className="rotate-90"
                onClick={[Function]}
              />
            </button>
          </a>
        </div>
        <div
          className="relative group flex flex-col h-32 w-[100%] md:w-[calc(100%/2)] lg:w-[calc(100%/3)] xl:w-[calc(100%/4)]"
        >
          <a
            className="flex m-2 h-full justify-between overflow-hidden rounded border p-6 flex border-light-gray border-2 bg-white items-center !justify-start relative "
            href="/workspaces/42"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            <button
              className="flex items-center max-w-full focus:outline-none"
            >
              <span
                className="flex min-w-[50px]"
              >
                <div />
              </span>
              <span
                className="flex ml-4 flex-col items-start"
              >
                <div
                  className="overflow-hidden whitespace-nowrap text-ellipsis mb-0 max-w-full font-bold"
                >
                  bar
                </div>
                <div
                  className="overflow-hidden whitespace-nowrap text-ellipsis max-w-[15rem]"
                >
                  
                </div>
                edit.label
              </span>
              <button
                className="rotate-90"
                onClick={[Function]}
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="absolute bottom-1 right-1 text-gray mr-1 text-[10px]"
  >
    Prisme.ai v
    6.8.0
  </div>,
]
`;
